Fix compilation issues.
	* .gitignore: Add Autotools generated files.
	* configure.ac: Set where Libool should copy its files.
	* tests/Makefile.am: Add simple-test.
	* tests/simple-test.cc: Add missing header.
	* tests/simple-test.stdout: Add simple-test output.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -45,6 +45,7 @@ JRL_CXX_WARNINGS([[-Wall],
 ## ------------------- ##
 
 # Search for Libtool.
+AC_CONFIG_MACRO_DIR([build-aux])
 AC_PROG_LIBTOOL
 
 ## ------------ ##
