Add dummy plug-in placeholder.
	* configure.ac: Generate plug-in, dummy Makefiles.
	* src/Makefile.am: Add plug-in to SUBDIRS.
	* src/plug-in/Makefile.am: New.
	* src/plug-in/dummy/Makefile.am: New.
	* src/plug-in/dummy/dummy.cc: New.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -71,6 +71,8 @@ AC_CONFIG_FILES([
     packages/ebuild/Makefile
     packages/rpm/Makefile
    src/Makefile
+    src/plug-in/Makefile
+     src/plug-in/dummy/Makefile
    doc/Makefile
    tests/Makefile
     tests/atlocal
