Implement dummy solver.
	* configure.ac: Search for Boost.
	* src/Makefile.am: Fix filenames.
	* src/optimization-fwd.hh: Add forward declarations.
	* src/plug-in/dummy/dummy.cc: Implement dummy solver.
	* src/solver.cc,
	* src/solver.hh: Implement abstract solver.
	* tests/common.hh: Fix GENERATE_TEST macro.
	* tests/simple-test.at: Fix description.
	* tests/simple-test.cc: Implement test using the dummy solver.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -48,6 +48,13 @@ JRL_CXX_WARNINGS([[-Wall],
 AC_CONFIG_MACRO_DIR([build-aux])
 AC_PROG_LIBTOOL
 
+# Search for Boost
+BOOST_FUNCTION
+BOOST_LAMBDA
+BOOST_OPTIONAL
+BOOST_UTILITY
+BOOST_VARIANT
+
 ## ------------ ##
 ## Test-suite.  ##
 ## ------------ ##
