Generate pkg-config file.
	* Makefile.am: Add generation and install rules.
	* build-aux/pkg-config.pc.in: New.
	* configure.ac: Build tar.bz2 tarball.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -12,7 +12,7 @@ AC_INIT([Generic optimization library], [0.1], [thomas.moulard@gmail.com],
 AC_CONFIG_AUX_DIR([build-aux])
 
 # Automake.
-AM_INIT_AUTOMAKE([1.9.6 dist-bzip2 -Wall nostdinc])
+AM_INIT_AUTOMAKE([1.9.6 -Wall nostdinc])
 
 ## ------------- ##
 ## C++ compiler  ##
