Make Solver generic.
	* configure.ac: Remove plug-in Makefiles, distribute tar.bz2.
	* src/Makefile.am: Remove plug-in.
	* src/dummy.hh: Rename from src/plug-in/dummy/dummy.cc.
	* src/optimization-fwd.hh: Fix Solver type.
	* src/plug-in/Makefile.am: Remove.
	* src/plug-in/dummy/Makefile.am: Remove.
	* src/solver.hh: Make Solver generic.
	* src/solver.hxx: Rename from src/solver.cc.
	* tests/Makefile.am: Fix test linking.
	* tests/simple-test.at: Fix test description.
	* tests/simple-test.cc: Use generic solver class.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,16 +1,10 @@
 include $(top_srcdir)/build-aux/init.mk
 
-SUBDIRS = plug-in
-
 # Add available warnings flags.
 AM_CXXFLAGS += $(WARNING_CXXFLAGS)
 
-lib_LTLIBRARIES = liboptimization.la
-
 include_HEADERS =					\
 				optimization-fwd.hh	\
-				solver.hh
-
-liboptimization_la_SOURCES = 				\
-				doc.hh			\
-				solver.cc
+				solver.hh		\
+				solver.hxx		\
+				dummy.hh
