Detect function arity at compile-time.
	* src/ipopt.hh: Set arity in get_nlp_info.
	* src/solver.hh,
	* src/solver.hxx: Detect arity and add getArity method.
	* tests/Makefile.am: Fix ipopt test case flags.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -21,6 +21,7 @@ simple_test_SOURCES = simple-test.cc $(COMMON_SOURCES)
 check_PROGRAMS += ipopt
 ipopt_SOURCES = ipopt.cc $(COMMON_SOURCES)
 ipopt_LDADD = -lipopt -lgfortran
+ipopt_LDFLAGS = -pthread
 
 .PHONY: generate-reference
 
