Back to object oriented.
	* src/Makefile.am: Add library.
	* src/dummy.cc: Rename from src/dummy.hh.
	* src/ipopt.cc: Rename from src/ipopt.hh.
	* src/optimization-fwd.hh: Remove template.
	* src/solver.cc: Rename from src/solver.hxx.
	* src/solver.hh: Fix header to get function arity at run-time.
	* tests/Makefile.am: Link to liboptimization.
	* tests/ipopt.cc,
	* tests/simple-test.cc: Use the untemplated interface.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,7 +5,15 @@ AM_CXXFLAGS += $(WARNING_CXXFLAGS)
 
 include_HEADERS =					\
 				optimization-fwd.hh	\
-				solver.hh		\
-				solver.hxx		\
-				dummy.hh		\
-				ipopt.hh
+				solver.hh
+
+lib_LTLIBRARIES = liboptimization.la
+
+liboptimization_la_SOURCES = 				\
+				doc.hh			\
+				solver.cc		\
+				dummy.cc		\
+				ipopt.cc
+
+liboptimization_la_LIBADD = -lipopt -lgfortran
+liboptimization_la_LDFLAGS = -pthread
