Implement bounded variable in Solver and IpoptSolver.
	* .gitignore: Do not commit testsuite.log.
	* doc/Doxyfile.in: Do not search for doc in tarballs/packages.
	* doc/Makefile.am: Pass PACKAGE_TARNAME to Doxygen.
	* src/doc.hh: Document detail namespace.
	* src/dummy.cc,
	* src/dummy.hh: Fix documentation.
	* src/ipopt.cc: Implement bounds.
	* src/ipopt.hh: New.
	* src/optimization-fwd.hh: Fix documentation.
	* src/solver.cc,
	* src/solver.hh: Implement bounds.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -521,7 +521,9 @@ RECURSIVE              = YES
 # excluded from the INPUT source files. This way you can easily exclude a
 # subdirectory from a directory tree whose root is specified with the INPUT tag.
 
-EXCLUDE                =
+EXCLUDE                = @top_builddir@/packages \
+                         @top_builddir@/doc      \
+                         @top_builddir@/@PACKAGE_TARNAME@-@PACKAGE_VERSION@
 
 # The EXCLUDE_SYMLINKS tag can be used select whether or not files or
 # directories that are symbolic links (a Unix filesystem feature) are excluded
