Clean package, debug Ipopt.
	* src/Makefile.am: Add missing distributed headers.
	* src/doc.hh: Document (draft of the main page).
	* src/dummy.cc: Describe returned errors.
	* src/dummy.hh: Add default params to constructors.
	* src/ipopt.cc: Clean, debug implementation.
	* src/ipopt.hh: Add default params to constructor.
	* src/solver.hh: Add default parameters to constructor
        and allows access to internal Ipopt application.
	* tests/ipopt.cc: Debug and clean, make stricter.
	* tests/ipopt.stdout: Put definitive output.
	* tests/simple-test.cc: Do not pass useless parameters.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,7 +5,9 @@ AM_CXXFLAGS += $(WARNING_CXXFLAGS)
 
 include_HEADERS =					\
 				optimization-fwd.hh	\
-				solver.hh
+				solver.hh		\
+				dummy.hh		\
+				ipopt.hh
 
 lib_LTLIBRARIES = liboptimization.la
 
