Add CFSQP solver.
	* src/Makefile.am: Compile CFSQPSolver class, distribute header.
	* src/cfsqp.cc: Copy from src/optimization-fwd.hh.
	* src/cfsqp.hh: Copy from src/optimization-fwd.hh.
	* src/optimization-fwd.hh: Predeclare CFSQPSolver.
	* tests/Makefile.am: Add CFSQP test.
	* tests/cfsqp.at: Add CFSQP test (tag as xfail for now).
	* tests/cfsqp.cc: Copy from tests/ipopt.cc.
	* tests/cfsqp.stdout: New.
	* tests/ipopt.cc: Remove explicit use of IpoptSolver.
	* tests/testsuite.at: Include CFSQP test.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,7 +7,8 @@ include_HEADERS =					\
 				optimization-fwd.hh	\
 				solver.hh		\
 				dummy.hh		\
-				ipopt.hh
+				ipopt.hh		\
+				cfsqp.hh
 
 lib_LTLIBRARIES = liboptimization.la
 
@@ -15,7 +16,8 @@ liboptimization_la_SOURCES = 				\
 				doc.hh			\
 				solver.cc		\
 				dummy.cc		\
-				ipopt.cc
+				ipopt.cc		\
+				cfsqp.cc
 
 liboptimization_la_LIBADD = -lipopt -lgfortran
 liboptimization_la_LDFLAGS = -pthread
