Add rough implementation of a CFSQP bridge.
	* TODO: Add items.
	* src/Makefile.am: Link against CFSQP.
	* src/cfsqp.cc: Implement the bridge.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -19,5 +19,5 @@ liboptimization_la_SOURCES = 				\
 				ipopt.cc		\
 				cfsqp.cc
 
-liboptimization_la_LIBADD = -lipopt -lgfortran
+liboptimization_la_LIBADD = -lipopt -lgfortran -lcfsqp
 liboptimization_la_LDFLAGS = -pthread
