Factorize some code.
	* src/Makefile.am: Add util source/header.
	* src/cfsqp.cc,
	* src/ipopt.cc: Move vector_to_array/array_to_vector into util.cc.
	* src/util.cc: New.
	* src/util.hh: New.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,7 +8,8 @@ include_HEADERS =					\
 				solver.hh		\
 				dummy.hh		\
 				ipopt.hh		\
-				cfsqp.hh
+				cfsqp.hh		\
+				util.hh
 
 lib_LTLIBRARIES = liboptimization.la
 
@@ -17,7 +18,8 @@ liboptimization_la_SOURCES = 				\
 				solver.cc		\
 				dummy.cc		\
 				ipopt.cc		\
-				cfsqp.cc
+				cfsqp.cc		\
+				util.cc
 
 liboptimization_la_LIBADD = -lipopt -lgfortran -lcfsqp
 liboptimization_la_LDFLAGS = -pthread
