Rename optimization-fwd.hh into fwd.hh, document.
	* src/Makefile.am: Rename fwd.
	* src/function.hh: Document.
	* src/fwd.hh: Rename from src/optimization-fwd.hh.
	* src/problem.hh,
	* src/solver.hh: Document.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,7 +4,7 @@ include $(top_srcdir)/build-aux/init.mk
 AM_CXXFLAGS += $(WARNING_CXXFLAGS)
 
 include_HEADERS =					\
-				optimization-fwd.hh	\
+				fwd.hh			\
 				solver.hh		\
 				dummy.hh		\
 				ipopt.hh		\
