Make configure detect solvers.
	* README: Document how to build a shared library from CFSQP.
	* TODO: Update, reorganize.
	* build-aux/acx_pthread.m4: New.
	* build-aux/autotest.mk: When configure is modified,
        regenerate testsuite.
	* build-aux/cfsqp.m4: New.
	* build-aux/ipopt.m4: New.
	* configure.ac: Add a soft dependency on Ipopt and CFSQP.
	* src/Makefile.am: Only build bridges for available solvers.
	* tests/Makefile.am,
	* tests/cfsqp.at,
	* tests/ipopt.at: Only test availables solvers.
	* tests/package.m4.in: Pass available solvers to test suite.
	* tests/testsuite.at: Fix documentation.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -55,6 +55,13 @@ BOOST_OPTIONAL
 BOOST_UTILITY
 BOOST_VARIANT
 
+# Search for solvers (optional deps).
+#  CFSQP
+CFSQP_ARG_WITH
+#  Ipopt
+IPOPT_ARG_WITH
+
+
 ## ------------ ##
 ## Test-suite.  ##
 ## ------------ ##
