--- a/tests/package.m4.in
+++ b/tests/package.m4.in
@@ -21,3 +21,6 @@ m4_define([AT_PACKAGE_TARNAME],   [@PACKAGE_TARNAME@])
 m4_define([AT_PACKAGE_VERSION],   [@PACKAGE_VERSION@])
 m4_define([AT_PACKAGE_STRING],    [@PACKAGE_STRING@])
 m4_define([AT_PACKAGE_BUGREPORT], [@PACKAGE_BUGREPORT@])
+
+m4_define([CFSQP], [@CFSQP_LIBADD@])
+m4_define([IPOPT], [@IPOPT_LIBADD@])
