Fix package distribution.
	* Makefile.am: Add include to subdirs.
	* build-aux/init.mk: Search in distributed headers.
	* build-aux/pkg-config.pc.in: Import from packageCreate.
	* configure.ac: Generate Makefile in include.
	* doc/Doxyfile.in,
	* doc/Makefile.am: Import from packageCreate.
	* doc/footer.html: New.
	* doc/header.html: New.
	* doc/package.css: New.
	* include/Makefile.am: New.
	* include/liboptimization/cfsqp.hh: Rename from src/cfsqp.hh.
	* include/liboptimization/dummy.hh: Rename from src/dummy.hh.
	* include/liboptimization/function.hh: Rename from src/function.hh.
	* include/liboptimization/fwd.hh: Rename from src/fwd.hh.
	* include/liboptimization/ipopt.hh: Rename from src/ipopt.hh.
	* include/liboptimization/problem.hh: Rename from src/problem.hh.
	* include/liboptimization/problem.hxx: Rename from src/problem.hxx.
	* include/liboptimization/solver.hh: Rename from src/solver.hh.
	* include/liboptimization/solver.hxx: Rename from src/solver.hxx.
	* include/liboptimization/util.hh: Copy from src/util.hh.
	* include/liboptimization/util.hxx: Rename from src/util.hxx.
	* src/Makefile.am: Do not list distributed headers here anymore.
	* src/cfsqp.cc,
	* src/doc.hh,
	* src/dummy.cc,
	* src/function.cc,
	* src/ipopt.cc,
	* src/solver.cc,
	* src/util.cc,
	* src/util.hh,
	* tests/cfsqp.cc,
	* tests/hs071.hh,
	* tests/ipopt.cc,
	* tests/simple-test.cc: Fix include paths.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,29 +5,32 @@ SUBDIRS = 		\
 	doc		\
 	packages	\
 	src		\
+	include		\
 	tests
+
 
 # Provide bootstrap with the generated package.
 EXTRA_DIST = bootstrap $(PACKAGE_TARNAME).m4
 
+
 # Nothing to do in this directory.
 all:
 
+
 # Pkg-config generation
-PKG_CONFIG_FILE = @PACKAGE_TARNAME@-@PACKAGE_VERSION@.pc
+PKG_CONFIG_FILE = @PACKAGE_TARNAME@.pc
 PKG_DIR="$(DESTDIR)$(libdir)/pkg-config/"
 
-edit = sed -e 's,@prefix\@,$(prefix),g' \
-	   -e 's,@exec_prefix\@,$(exec_prefix),g' \
-	   -e 's,@libdir\@,$(libdir),g' \
-	   -e 's,@includedir\@,$(includedir),g' \
-	   -e 's,@datadir\@,$(datadir),g' \
-	   -e 's,@datarootdir\@,$(datarootdir),g' \
-	   -e 's,@PACKAGE\@,@PACKAGE@,g' \
-	   -e 's,@PACKAGE_TARNAME\@,@PACKAGE_TARNAME@,g' \
-	   -e 's,@VERSION\@,@VERSION@,g'
+edit = sed -e "s|@prefix\@|$(prefix)|" \
+           -e 's,@exec_prefix\@,$(exec_prefix),g' \
+           -e 's,@libdir\@,$(libdir),g' \
+           -e 's,@includedir\@,$(includedir),g' \
+           -e 's,@datarootdir\@,$(datarootdir),g' \
+           -e 's,@PACKAGE\@,$(PACKAGE),g' \
+           -e 's,@PACKAGE_TARNAME\@,$(PACKAGE_TARNAME),g' \
+           -e 's,@VERSION\@,$(PACKAGE_VERSION),g'
 
-@PACKAGE_TARNAME@-@PACKAGE_VERSION@.pc: $(srcdir)/build-aux/pkg-config.pc.in
+@PACKAGE_TARNAME@.pc: $(srcdir)/build-aux/pkg-config.pc.in
 	$(edit) $(srcdir)/build-aux/pkg-config.pc.in >$@
 
 EXTRA_DIST += build-aux/pkg-config.pc.in
@@ -36,7 +39,7 @@ CLEANFILES = $(PKG_CONFIG_FILE)
 install-data-local: install-pkg-config
 uninstall-local: uninstall-pkg-config
 
-install-pkg-config: $(PACKAGE_TARNAME)-$(PACKAGE_VERSION).pc
+install-pkg-config: $(PACKAGE_TARNAME).pc
 	$(MKDIR_P) $(PKG_DIR)
 	cp "$(PKG_CONFIG_FILE)" $(PKG_DIR)
 
