Split linear/non-linear constraints in CFSQP.
	* build-aux/boost.m4: Detect Boost.StaticAssert and Boost.TypeTraits.
	* configure.ac: Search for Boost.StaticAssert and Boost.TypeTraits.
	* include/liboptimization/cfsqp.hh, Split linear/non-linear constraints using
        Boost.Variant.
	* include/liboptimization/dummy.hh,
	* include/liboptimization/ipopt.hh,
	* include/liboptimization/problem.hh: Inherit now from Solver<F, const C*>
        instead of Solver<F, C> before (required to allow Variant constraints).
	* include/liboptimization/solver.hh: Fix constraints type.
	* src/cfsqp.cc: Implement linear/non-linear constraints splitting.
	* src/doc.hh: Fix main page name.
	* tests/cfsqp.cc,
	* tests/ipopt.cc,
	* tests/simple-test.cc: Make tests more robust by using problem_t
        instead of specifying its type explicitly.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -49,9 +49,9 @@ AC_CONFIG_MACRO_DIR([build-aux])
 AC_PROG_LIBTOOL
 
 # Search for Boost
-BOOST_FUNCTION
-BOOST_LAMBDA
 BOOST_OPTIONAL
+BOOST_STATICASSERT
+BOOST_TYPETRAITS
 BOOST_UTILITY
 BOOST_VARIANT
 
