Add script that uploads documentation to AIST server.
	* configure.ac: Generate the shell script.
	* doc/aist-upload.sh.in: New.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -94,5 +94,7 @@ AC_CONFIG_FILES([
 
 AC_CONFIG_FILES([doc/Doxyfile])
 
+AC_CONFIG_FILES([doc/aist-upload.sh], [chmod +x doc/aist-upload.sh])
+
 # Write files.
 AC_OUTPUT
