Implement problem conversion.
	* build-aux/boost.m4,
	* configure.ac: Search for Boost.MPL.
	* include/Makefile.am: Add problem-converter to header list.
	* include/liboptimization/problem-converter.hh: New.
	* include/liboptimization/problem-converter.hxx: New.
	* include/liboptimization/problem.hh,
	* include/liboptimization/problem.hxx: Implement generic
        copy constructors.
	* include/liboptimization/solver.hh,
	* include/liboptimization/solver.hxx: Convert problem if
        the providen one is not of the expected complexity.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -49,6 +49,7 @@ AC_CONFIG_MACRO_DIR([build-aux])
 AC_PROG_LIBTOOL
 
 # Search for Boost
+BOOST_MPL
 BOOST_OPTIONAL
 BOOST_STATICASSERT
 BOOST_TYPETRAITS
