Check static problem conversion through copy constructor.
	* include/liboptimization/problem.hh,
	* include/liboptimization/problem.hxx: Fix problem conversion.
	* src/function.cc: Check that the problem arity is positive.
	* tests/Makefile.am: Add new test.
	* tests/common.hh: Include iostream.
	* tests/problem-cc.at: Copy from tests/testsuite.at.
	* tests/problem-cc.cc: New.
	* tests/problem-cc.stdout: New.
	* tests/testsuite.at: Include new test.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -18,6 +18,11 @@ check_PROGRAMS = simple-test
 simple_test_SOURCES = simple-test.cc $(COMMON_SOURCES)
 simple_test_LDADD = $(top_builddir)/src/liboptimization.la
 
+# problem-cc
+check_PROGRAMS += problem-cc
+problem_cc_SOURCES = problem-cc.cc $(COMMON_SOURCES)
+problem_cc_LDADD = $(top_builddir)/src/liboptimization.la
+
 
 # Ipopt
 if IPOPT
