Remove problem_converter. Enhance type checks.
	* include/Makefile.am: Remove.
	* include/liboptimization/problem-converter.hh: Remove.
	* include/liboptimization/problem-converter.hxx: Remove.
	* include/liboptimization/problem.hh,
	* include/liboptimization/problem.hxx
	* include/liboptimization/solver.hh,
	* include/liboptimization/solver.hxx,
	* src/cfsqp.cc: Use is_base_of instead of is_convertible.
	* tests/Makefile.am: Distribute missing test files.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -64,10 +64,12 @@ generate-reference:
 TESTSUITE_AT =					\
 	simple-test.at				\
 	ipopt.at				\
-	cfsqp.at
+	cfsqp.at				\
+	problem-cc.at
 
 # Distribute reference files.
 EXTRA_DIST +=					\
 	simple-test.stdout			\
 	ipopt.stdout				\
-	cfsqp.stdout
+	cfsqp.stdout				\
+	problem-cc.stdout
