Implement NumericQuadraticFunction and NumericLinearFunction.
	* include/Makefile.am: Add new headers.
	* include/liboptimization/linear-function.hh: Remove hessian.
	* include/liboptimization/numeric-linear-function.hh: Copy from
        include/liboptimization/linear-function.hh.
	* include/liboptimization/numeric-quadratic-function.hh: Copy from
        include/liboptimization/linear-function.hh.
	* src/Makefile.am: Add new source files.
	* src/linear-function.cc: Remove hessian implementation.
	* src/numeric-linear-function.cc: New.
	* src/numeric-quadratic-function.cc: New.
	* tests/Makefile.am: Add new tests.
	* tests/numeric-linear-function.at: Copy from tests/testsuite.at.
	* tests/numeric-linear-function.cc: Copy from
        include/liboptimization/linear-function.hh.
	* tests/numeric-linear-function.stdout: New.
	* tests/numeric-quadratic-function.at: Copy from tests/testsuite.at.
	* tests/numeric-quadratic-function.cc: New.
	* tests/numeric-quadratic-function.stdout: New.
	* tests/testsuite.at: Include new tests.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -9,6 +9,8 @@ nobase_include_HEADERS =				\
 	liboptimization/generic-solver.hh		\
 	liboptimization/indent.hh			\
 	liboptimization/linear-function.hh		\
+	liboptimization/numeric-quadratic-function.hh	\
+	liboptimization/numeric-linear-function.hh	\
 	liboptimization/problem.hh			\
 	liboptimization/problem.hxx			\
 	liboptimization/quadratic-function.hh		\
