Add the possibility to run test suite with external tools.
	* README: Document how to use the test suite with
        Valgrind.
	* build-aux/cfsqp.m4,
	* build-aux/ipopt.m4: Rename IPOPT/CFSQP into
        HAVE_IPOPT/HAVE_CFSQP to avoid unexpected expansion.
	* include/Makefile.am: Use HAVE_IPOPT/HAVE_CFSQP.
	* src/Makefile.am: Use HAVE_IPOPT/HAVE_CFSQP.
	* tests/Makefile.am: Use HAVE_IPOPT/HAVE_CFSQP.
	* tests/atlocal.in: Import CHECK_PREFIX.
	* tests/cfsqp.at,
	* tests/ipopt.at,
	* tests/numeric-linear-function.at,
	* tests/numeric-quadratic-function.at,
	* tests/problem-cc.at,
	* tests/simple-test.at: Prefix launched commands by
        CHECK_PREFIX.
	* tests/testsuite.at: Reorganize test suite by group.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -21,10 +21,10 @@ nobase_include_HEADERS =				\
 	liboptimization/util.hh				\
 	liboptimization/util.hxx
 
-if CFSQP
+if HAVE_CFSQP
  nobase_include_HEADERS += liboptimization/cfsqp.hh
 endif
 
-if IPOPT
+if HAVE_IPOPT
  nobase_include_HEADERS += liboptimization/ipopt.hh
 endif
