Handle results with/without warnings.
	* include/liboptimization/fwd.hh: Predeclare new classes.
	* include/liboptimization/generic-solver.hh: result_t
        changed to no solution/result/result with warnings/error.
	* include/liboptimization/result-with-warnings.hh: Copy from
        include/liboptimization/solver-error.hh.
	* include/liboptimization/result.hh: New.
	* include/liboptimization/solver-error.hh: Make SolverError
        printable.
	* include/liboptimization/solver-warning.hh: Copy from
        include/liboptimization/solver-error.hh.
	* src/Makefile.am: Add new source files.
	* src/cfsqp.cc: Fix bridge.
	* src/generic-solver.cc: Restyle.
	* src/ipopt.cc: Fix bridge.
	* src/result-with-warnings.cc: Copy from src/solver-error.cc.
	* src/result.cc: New.
	* src/solver-error.cc: Make SolverError printable.
	* src/solver-warning.cc: Copy from src/solver-error.cc.
	* tests/cfsqp.at: Fix CFSQP detection.
	* tests/cfsqp.cc: Fix test case.
	* tests/ipopt.at: Fix IPOPT detection.
	* tests/ipopt.cc: Fix test case.
	* tests/ipopt.stdout: Regenerate output.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -16,7 +16,10 @@ liboptimization_la_SOURCES = 		\
 	numeric-linear-function.cc	\
 	numeric-quadratic-function.cc	\
 	quadratic-function.cc		\
+	result.cc			\
+	result-with-warnings.cc		\
 	solver-error.cc			\
+	solver-warning.cc		\
 	twice-derivable-function.cc	\
 	util.cc
 
