Fix documentation style.
	* doc/Doxyfile.in: Add new stylesheets.
        Remove collaboration diagram.
	* doc/Makefile.am: Distribute new stylesheets.
	* doc/doxygen.css: New.
	* doc/tabs.css: New.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -7,7 +7,8 @@ doc: html
 html-local: Doxyfile
 	$(DOXYGEN)
 
-EXTRA_DIST = Doxyfile.in header.html footer.html package.css
+EXTRA_DIST = Doxyfile.in header.html footer.html \
+	package.css doxygen.css tabs.css
 CLEANFILES = $(PACKAGE_TARNAME).doxytag
 
 clean-local:
