Change project's name.
	* README,
	* build-aux/autotest.at,
	* build-aux/autotest.mk,
	* build-aux/cfsqp.m4,
	* build-aux/ipopt.m4,
	* configure.ac,
	* doc/Makefile.am,
	* doc/aist-upload.sh.in,
	* include/Makefile.am: Change project's name.
	* include/roboptim-core/cfsqp.hh:
        Rename from include/liboptimization/cfsqp.hh.
	* include/roboptim-core/derivable-function.hh:
        Rename from include/liboptimization/derivable-function.hh.
	* include/roboptim-core/dummy.hh:
        Rename from include/liboptimization/dummy.hh.
	* include/roboptim-core/function.hh:
        Rename from include/liboptimization/function.hh.
	* include/roboptim-core/fwd.hh:
        Rename from include/liboptimization/fwd.hh.
	* include/roboptim-core/generic-solver.hh:
        Rename from include/liboptimization/generic-solver.hh.
	* include/roboptim-core/indent.hh:
        Rename from include/liboptimization/indent.hh.
	* include/roboptim-core/ipopt.hh:
        Rename from include/liboptimization/ipopt.hh.
	* include/roboptim-core/linear-function.hh:
        Rename from include/liboptimization/linear-function.hh.
	* include/roboptim-core/numeric-linear-function.hh:
        Rename from include/liboptimization/numeric-linear-function.hh.
	* include/roboptim-core/numeric-quadratic-function.hh:
        Rename from include/liboptimization/numeric-quadratic-function.hh.
	* include/roboptim-core/problem.hh:
        Rename from include/liboptimization/problem.hh.
	* include/roboptim-core/problem.hxx:
        Rename from include/liboptimization/problem.hxx.
	* include/roboptim-core/quadratic-function.hh:
        Rename from include/liboptimization/quadratic-function.hh.
	* include/roboptim-core/result-with-warnings.hh:
        Rename from include/liboptimization/result-with-warnings.hh.
	* include/roboptim-core/result.hh:
        Rename from include/liboptimization/result.hh.
	* include/roboptim-core/solver-error.hh:
        Rename from include/liboptimization/solver-error.hh.
	* include/robopt

--- a/configure.ac
+++ b/configure.ac
@@ -5,8 +5,8 @@ AC_PREREQ([2.59])
 ## --------------------- ##
 ## Package configuration ##
 ## --------------------- ##
-AC_INIT([Generic optimization library], [0.1], [thomas.moulard@gmail.com],
-             [liboptimization])
+AC_INIT([RobOptim core library], [0.1], [thomas.moulard@gmail.com],
+        [roboptim-core])
 
 # Auxiliary files.
 AC_CONFIG_AUX_DIR([build-aux])
