--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -16,23 +16,23 @@ COMMON_SOURCES = common.hh hs071.hh
 # simple
 check_PROGRAMS = simple
 simple_SOURCES = simple.cc $(COMMON_SOURCES)
-simple_LDADD = $(top_builddir)/src/liboptimization.la
+simple_LDADD = $(top_builddir)/src/libroboptim-core.la
 
 # problem-cc
 check_PROGRAMS += problem-cc
 problem_cc_SOURCES = problem-cc.cc $(COMMON_SOURCES)
-problem_cc_LDADD = $(top_builddir)/src/liboptimization.la
+problem_cc_LDADD = $(top_builddir)/src/libroboptim-core.la
 
 # numeric-linear-function
 check_PROGRAMS += numeric-linear-function
 numeric_linear_function_SOURCES = numeric-linear-function.cc $(COMMON_SOURCES)
-numeric_linear_function_LDADD = $(top_builddir)/src/liboptimization.la
+numeric_linear_function_LDADD = $(top_builddir)/src/libroboptim-core.la
 
 # numeric-quadratic-function
 check_PROGRAMS += numeric-quadratic-function
 numeric_quadratic_function_SOURCES = numeric-quadratic-function.cc \
 	$(COMMON_SOURCES)
-numeric_quadratic_function_LDADD = $(top_builddir)/src/liboptimization.la
+numeric_quadratic_function_LDADD = $(top_builddir)/src/libroboptim-core.la
 
 
 # Ipopt
@@ -41,7 +41,7 @@ if HAVE_IPOPT
 # with that name.
 check_PROGRAMS += ipopt-test
 ipopt_test_SOURCES = ipopt.cc $(COMMON_SOURCES)
-ipopt_test_LDADD = $(top_builddir)/src/liboptimization.la
+ipopt_test_LDADD = $(top_builddir)/src/libroboptim-core.la
 endif
 
 
@@ -49,7 +49,7 @@ endif
 if HAVE_CFSQP
 check_PROGRAMS += cfsqp
 cfsqp_SOURCES = cfsqp.cc $(COMMON_SOURCES)
-cfsqp_LDADD = $(top_builddir)/src/liboptimization.la
+cfsqp_LDADD = $(top_builddir)/src/libroboptim-core.la
 endif
 
 
