--- a/packages/debian/control
+++ b/packages/debian/control
@@ -1,11 +1,11 @@
-Source: liboptimization
+Source: roboptim
 Section: devel
 Priority: optional
 Maintainer: Thomas Moulard <thomas.moulard@gmail.com>
 Build-Depends-Indep: debhelper (>= 4.0.0), autotools-dev
 Standards-Version: 3.6.2
 
-Package: liboptimization
+Package: roboptim
 Architecture: all
 Depends: ${shlibs:Depends}
 Description: Generic optimization library.
