Fix package information.
	* configure.ac: Fix contact e-mail.
	* roboptim-core.m4: Fix package name.
	* src/doc.hh: Fix package URL.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -5,7 +5,7 @@ AC_PREREQ([2.59])
 ## --------------------- ##
 ## Package configuration ##
 ## --------------------- ##
-AC_INIT([RobOptim core library], [0.1], [thomas.moulard@gmail.com],
+AC_INIT([RobOptim core library], [0.1], [roboptim-user@lists.sourceforge.net],
         [roboptim-core])
 
 # Auxiliary files.
