Fix package building mechanism.
	* build-aux/deb.mk: Fix dpkg command.
	* packages/debian/ChangeLog,
	* packages/debian/changelog: Fill ChangeLog's.
	* packages/debian/control: Fix package definition.
	* packages/debian/copyright: Add date.
	* packages/debian/rules: Make executable.
	* packages/rpm/roboptim-core.spec: Fix package definition.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/packages/debian/control
+++ b/packages/debian/control
@@ -1,11 +1,11 @@
-Source: roboptim
+Source: roboptim-core
 Section: devel
 Priority: optional
 Maintainer: Thomas Moulard <thomas.moulard@gmail.com>
 Build-Depends-Indep: debhelper (>= 4.0.0), autotools-dev
 Standards-Version: 3.6.2
 
-Package: roboptim
+Package: roboptim-core
 Architecture: all
 Depends: ${shlibs:Depends}
 Description: Generic optimization library.
