Fix pkg-config library name.
	* build-aux/pkg-config.pc.in: Here.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/build-aux/pkg-config.pc.in
+++ b/build-aux/pkg-config.pc.in
@@ -9,5 +9,5 @@ Name: @PACKAGE@
 Description:
 Version: @VERSION@
 Requires:
-Libs: -L${libdir} -loptimization
+Libs: -L${libdir} -lroboptim-core
 Cflags: -I${includedir}
